--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>React App</title>
+    <title>Fitness App</title>
   </head>
   <body>
     <div id="root"></div>
